[gd_scene load_steps=3 format=3 uid="uid://dpxd2agykq3ia"]

[ext_resource type="Script" path="res://UI/OptionsMenu.gd" id="1_ap43l"]
[ext_resource type="PackedScene" uid="uid://q3fwonaguehp" path="res://UI/InputSettings/InputSettings.tscn" id="2_snsfy"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ap43l")
metadata/_edit_horizontal_guides_ = [939.0, 141.0]
metadata/_edit_vertical_guides_ = [524.0, 1397.0]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -475.0
offset_top = -475.0
offset_right = 475.0
offset_bottom = 475.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="InputSettings" parent="PanelContainer" instance=ExtResource("2_snsfy")]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Video
"

[node name="FullScreenCheck" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "FullScreen
"

[node name="ScreenShakeCheck" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Screen Shake
"

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Audio
"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Master volume"

[node name="MasterVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label4" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "SFX VOLUME
"

[node name="SFXVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 8

[node name="ConfigKeybinds" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Configure Keybinds"

[node name="ResetSettings" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Reset Settings"

[node name="Label6" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "For Erwin"

[node name="VerticalCameraCheck" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Invert Vertical Camera"

[node name="HorizCameraCheck" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Invert Horizontal Camera"

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Go Back"
icon_alignment = 1

[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer2/FullScreenCheck" to="." method="_on_full_screen_check_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer2/ScreenShakeCheck" to="." method="_on_screen_shake_check_toggled"]
[connection signal="drag_ended" from="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer2/VBoxContainer/MasterVolumeSlider" to="." method="_on_master_volume_drag_ended"]
[connection signal="ready" from="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer2/VBoxContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_ready"]
[connection signal="drag_ended" from="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer2/VBoxContainer2/SFXVolumeSlider" to="." method="_on_sfx_volume_drag_ended"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer/ConfigKeybinds" to="." method="_on_config_keybinds_pressed"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer2/VerticalCameraCheck" to="." method="_on_vertical_camera_check_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer2/HorizCameraCheck" to="." method="_on_horiz_camera_check_toggled"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer2/Button" to="." method="_on_button_pressed"]
